syntax = "proto3";

package warehouse;

option go_package = "github.com/vavelour/warehouse/pkg/warehouse_v1;warehouse_v1";

service WarehouseV1 {
  rpc ReserveItems(ReserveItemsRequest) returns (ReserveItemsResponse);
  rpc ReleaseReserveItems(ReleaseReserveItemsRequest) returns (ReleaseReserveItemsResponse);
  rpc GetRemainingItems(GetRemainingItemsRequest) returns (GetRemainingItemsResponse);
}

message ReserveItemsRequest {
  repeated ItemReservation products = 1;
}

message ReserveItemsResponse {
  bool success = 1;
}

message ReleaseReserveItemsRequest {
  repeated ItemReservation products = 1;
}

message ReleaseReserveItemsResponse {
  bool success = 1;
}

message GetRemainingItemsRequest {
  int64 warehouse_id = 1;
}

message GetRemainingItemsResponse {
  repeated Item item_list = 1;
}

message Item {
  string name = 1;
  int64 size = 2;
  int64 unique_code = 3;
  int64 quantity = 4;
}

message ItemReservation {
  int64 unique_code = 1;
  int64 warehouse_id = 2;
  int64 quantity = 3;
}